Updated preset constants in fan.py to also be lower case and added translation that is used to show the presets in the UI

--- a/custom_components/ecostream/translations/en.json
+++ b/custom_components/ecostream/translations/en.json
@@ -15,5 +15,20 @@
                 }
             }
         }
+    },
+    "entity": {
+    "fan": {
+      "ecostream_fan": {
+        "state_attributes": {
+          "preset_mode": {
+            "state": {
+              "low": "Low",
+              "mid": "Medium",
+              "high": "High"
+            }
+          }
+        }
+      }
     }
+  }
 }
